grammars/fallout-ssl/grammar.js
        source_file: ($) => repeat($._top_level),

        _top_level: ($) =>
            choice(
                $.preprocessor,
                $.procedure_forward,
                $.procedure,
                $.variable_decl,
                $.export_decl,
                $.macro_call_stmt, // Top-level macro invocation
            ),

        // Preprocessor: #define, #include, #ifdef, #ifndef, #endif, #undef, #else, etc.
        preprocessor: ($) =>
            choice(
                $.define,
                $.include,
                $.ifdef,
                $.ifndef,
                $.endif,
                $.undef,
                $.pp_else,
                $.other_preprocessor, // catch-all for unknown directives (#elif, #pragma, etc.)
            ),

        // #define NAME value or #define NAME(params) body
        // Combined token(prec(1, ...)) so "#define" wins over other_preprocessor
        // Body is parsed as real SSL statements/expressions, terminated by LINE_END (newline).
        define: ($) =>
            seq(
                alias(token(prec(1, seq("#", "define"))), "#define"),
                field("name", $.identifier),
                optional(field("params", $.macro_params)),
                optional(field("body", $.macro_body)),
                $._line_end,
            ),

        // Macro parameters: (a, b, c) - immediately after identifier, no whitespace.
        // Uses token.immediate("(") so the opening paren must immediately follow the name
        // (no whitespace), distinguishing `#define FOO(x) body` from `#define FOO (x)`.
        // Unlike the old opaque token, params are parsed as real identifiers.
        macro_params: ($) => seq(token.immediate("("), optional(commaSep($.identifier)), ")"),

        // Macro body: parsed as real SSL statements (expressions are covered via expression_stmt).
        // Terminated by LINE_END from the external scanner (bare newline = end of #define).
        // Line continuations (\<newline>) are in extras, so multi-line macros work transparently.
        // The final statement may omit its trailing `;` (valid: the C preprocessor pastes macro
        // bodies verbatim), so the body ends in an optional unterminated tail.
        macro_body: ($) => choice(repeat1($._statement), seq(repeat($._statement), $._macro_tail)),

        // Unterminated final statement of a macro body: only statements that REQUIRE a `;` need a
        // twin here (variable_decl, export_decl, macro_call_stmt and expression_stmt already take
        // an optional one; break/continue never end a macro in the real corpus). Each twin aliases
        // to its terminated counterpart, and the two are distinguishable only at the terminator,
        // where the scanner emits `;` or LINE_END.
        _macro_tail: ($) =>
            choice(
                alias($.macro_final_assign, $.assignment),
                alias($.macro_final_return, $.return_stmt),
                alias($.macro_final_call, $.call_stmt),
                alias($.macro_final_if, $.if_stmt),
            ),

        include: ($) =>
            seq(
                alias(token(prec(1, seq("#", "include"))), "#include"),
                field(
                    "path",
                    choice(
                        $.string,
                        alias(token(seq("<", /[^>]+/, ">")), $.string),
                        $.identifier, // bare macro: #include EXTRA_HEADER (macro expands to a path)
                    ),
                ),
            ),

        // Named preprocessor directives with structured fields
        // Each uses token(prec(1, ...)) to beat the catch-all other_preprocessor (prec 0)
        ifdef: ($) => seq(alias(token(prec(1, seq("#", "ifdef"))), "#ifdef"), field("name", $.identifier)),
        ifndef: ($) => seq(alias(token(prec(1, seq("#", "ifndef"))), "#ifndef"), field("name", $.identifier)),
        endif: ($) => seq(alias(token(prec(1, seq("#", "endif"))), "#endif")),
        undef: ($) => seq(alias(token(prec(1, seq("#", "undef"))), "#undef"), field("name", $.identifier)),
        pp_else: ($) => seq(alias(token(prec(1, seq("#", "else"))), "#else")),

        // Catch-all for unknown preprocessor directives (#elif, #pragma, etc.)
        // Default precedence (0) -- named rules at prec 1 win for known directives
        procedure: ($) =>
            seq(
                optional(field("critical", $.procedure_critical)),
                optional(field("modifier", $.procedure_modifier)),
                kw("procedure"),
                field("name", $.identifier),
                optional(field("params", $.param_list)),
                optional(
                    choice(
                        seq(kw("in"), field("timed", $._expression)),
                        seq(kw("when"), field("condition", $._expression)),
                    ),
                ),
                kw("begin"),
                field("body", repeat($._statement)),
                kw("end"),
            ),

        // A trailing comma after the last parameter is accepted, as it is in shipped scripts.
        variable_decl: ($) =>
            choice(
                // prec.right for the same greedy-semicolon reason as expression_stmt.
                //
                // Known limitation: a BARE ternary initialiser (`variable a := 1 if c else 2`) does not
                // parse; the declaration reduces at `1` and strands the `if`. Telling a ternary from a
                // following if-statement needs lookahead past the condition to `else` versus `then`,
                // and because `;` is optional the two readings are genuinely ambiguous at that point -
                // ternary_expr sits at -1 precisely so `x := 1` followed by a new `if` statement closes
                // the statement instead of being swallowed. Parenthesising works and is what the
                // affected scripts can do; see the corpus allowlist entry.
                prec.right(seq(optional("import"), kw("variable"), commaSep($.var_init), optional(";"))),
                seq(kw("variable"), kw("begin"), repeat(seq(commaSep($.var_init), ";")), "end"),
            ),

        var_init: ($) =>
            seq(
                field("name", choice($.identifier, $.token_paste_identifier)),
                // Static array: `variable a[10]`, or `variable a[10, 2]` where the second constant is the
                // array's flags. Without the flags form the comma ends the declaration and the rest
                // parses as a separate array-literal statement, which is a silent misparse, not an error.
                // The bracket run is dynamically preferred: `variable b[4, 2];` also parses as a bare
                // declaration followed by the array literal `[4, 2]` as its own statement, and without a
                // preference tree-sitter picks that reading in some states and this one in others.
                optional(
                    prec.dynamic(
                        1,
                        seq("[", field("size", $._expression), optional(seq(",", field("flags", $._expression))), "]"),
                    ),
                ),
                optional(seq(choice(":=", "="), field("value", $._expression))),
            ),

        // Export: export variable name := value; (with optional init and optional semicolon)
        _statement: ($) =>
            choice(
                $.preprocessor,
                $.variable_decl,
                $.if_stmt,
                $.while_stmt,
                $.for_stmt,
                $.foreach_stmt,
                $.switch_stmt,
                $.return_stmt,
                $.break_stmt,
                $.continue_stmt,
                $.call_stmt,
                $.process_stmt,
                $.assignment,
                $.expression_stmt, // Covers function calls, macro calls, bare identifiers
                $.empty_statement,
                // A bare `begin ... end` block is a statement in its own right, not only a loop or
                // if-branch body. Macros that expand to a block rely on this; without it the `begin`
                // lexes as a bare identifier and the block's `end` closes the enclosing procedure,
                // which mis-parses silently rather than erroring.
                $.block,
            ),

        // A stray `;`, most often a second one after a block's `end`. Accepted rather than an error,
        // since it occurs in shipped scripts and carries no effect.
        if_stmt: ($) =>
            prec.right(
                seq(
                    kw("if"),
                    field("cond", $._expression),
                    kw("then"),
                    field("then", $._stmt_or_block),
                    optional(seq(kw("else"), field("else", $._stmt_or_block))),
                ),
            ),

        return_stmt: ($) => seq(kw("return"), optional($._expression), ";"),

        // Process-control statements: the engine runs child scripts, suspends, cancels pending events and
        // marks critical sections through these. They are keywords ONLY here, at the start of a statement,
        // because a script may `#define WAIT (2)` and then use that name in an expression - reserving the
        // word everywhere would turn such a file into a wall of syntax errors.
        call_stmt: ($) =>
            seq(
                // SSL keywords are case-insensitive; real scripts write `Call Foo;`. Matched as a plain
                // literal it lexes as an identifier and the statement silently becomes two expression
                // statements rather than a call.
                kw("call"),
                choice(field("target", $.identifier), field("target", $.call_expr)),
                optional(seq(kw("in"), field("delay", $._expression))),
                ";",
            ),

        // Macro invocation at top-level (outside procedures).
        // Preprocessor macros can appear anywhere in SSL code:
        // - At top-level: handled by macro_call_stmt
        // - Inside procedures: handled by expression_stmt (via identifier or call_expr)
        // - Inside expressions: handled by identifier or call_expr
        // This rule is only needed for top-level since expression_stmt isn't in _top_level.
        assignment: ($) =>
            seq(
                field("left", choice($.identifier, $.token_paste_identifier, $.subscript_expr, $.member_expr)),
                choice(":=", "=", "+=", "-=", "*=", "/="),
                field("right", $._expression),
                ";",
            ),

        // prec.right makes the optional `;` greedy, so a semicolon following an expression belongs to
        // it rather than starting an empty_statement.
        //
        // The 1 outranks ternary_expr, and that is a deliberate divergence from the compiler. Given
        // `f(a, b)` on one line and `if (...) then ...` on the next, the compiler continues the
        // expression as a ternary and fails for want of `else`; this grammar reads two statements.
        // The reason is that a macro invocation may omit its `;` because the expansion supplies the
        // terminator - real scripts do this (`Create_Car(HEX, ELEV)` followed by an `if`) - and a macro
        // call is syntactically indistinguishable from a function call, so the two cannot be ranked
        // apart. Erring the other way would reject valid source, which is worse for an editor grammar
        // than missing a diagnostic on invalid source; the compiler still reports it.
        expression_stmt: ($) => prec.right(1, seq($._expression, optional(";"))),

        // Kept as a named alias for readability at loop and if-branch bodies; `block` reaches it
        // through `_statement`, so listing it again here would make every block ambiguous.
        _stmt_or_block: ($) => $._statement,

        block: ($) => seq(kw("begin"), repeat($._statement), kw("end")),

        // Expressions
        _expression: ($) =>
            choice(
                $.ternary_expr,
                $.binary_expr,
                $.unary_expr,
                $.call_expr,
                $.subscript_expr,
                $.member_expr,
                $.paren_expr,
                $.array_expr,
                $.map_expr,
                $.proc_ref,
                $.token_paste_identifier, // ## token-pasting (macro bodies only)
                $.identifier,
                $.number,
                $.boolean,
                $.string,
                $.char,
            ),

        // Ternary expression: value_if_true if condition else value_if_false
        binary_expr: ($) =>
            choice(
                ...[
                    // The boolean operators share ONE precedence level and associate left, so
                    // `a or b and c` is `(a or b) and c` rather than `a or (b and c)`. This is
                    // unlike C and easy to assume wrong; the language's own parser gives all four
                    // the same level, and getting it wrong silently changes which operands pair up.
                    [kw("or"), 1],
                    [kw("orelse"), 1], // short-circuit or
                    [kw("and"), 1],
                    [kw("andalso"), 1], // short-circuit and
                    ["==", 6],
                    ["!=", 6],
                    [kw("in"), 6], // membership test: expr in array
                    ["<", 7],
                    [">", 7],
                    ["<=", 7],
                    [">=", 7],
                    ["+", 8],
                    ["-", 8],
                    [kw("bwor"), 8],
                    [kw("bwxor"), 8],
                    [kw("bwand"), 8],
                    ["*", 9],
                    ["/", 9],
                    ["%", 9],
                    [kw("div"), 9], // integer division, distinct from '/'
                    ["^", 9], // exponentiation
                ].map(([op, p]) =>
                    prec.left(p, seq(field("left", $._expression), field("op", op), field("right", $._expression))),
                ),
            ),

        // SSL's prefix operators are `floor`, `not`, `bwnot` and `-`. `floor` matters beyond spelling:
        // parsed as a call it resolves to a symbol that does not exist, where it is really a built-in
        // operator. The keyword is `bwnot` - `bnot` was accepted here previously and is not an SSL token.
        token_paste_identifier: ($) => seq($.identifier, repeat1(seq($._token_paste, $.identifier))),

        // A STRING may be the callee: `"node_" + n` is not it, but a literal `"foo"(1)` calls the
        // procedure named by the string, resolved by the engine at run time.
        call_expr: ($) =>
            prec(
                12,
                seq(
                    field("func", choice($.identifier, $.token_paste_identifier, $.string)),
                    "(",
                    field("args", optional(commaSep($._expression))),
                    ")",
                ),
            ),

        paren_expr: ($) => seq("(", $._expression, ")"),

        // Terminals
        // NOTE: SSL does not formally reserve most keywords - the language spec allows identifiers
        // like `default` or `begin` as variable names. However, tree-sitter's `word` property
        // (set to `$.identifier`) causes the lexer to prefer a keyword token over the identifier
        // token whenever that keyword appears in the current lookahead set. In practice this means
        // keywords such as `default` (used in switch) are effectively reserved in most parser
        // states, because a switch statement can appear anywhere a statement is expected.
        // Semantic detection of reserved-word identifiers is handled in the formatter, not here.
        identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

        number: ($) => token(choice(/\d+\.\d+/, /\.\d+/, /\d+/, /0x[0-9a-fA-F]+/)),
