grammars/fallout-ssl/test/corpus/preprocessor.txt
==================
Constant macros
==================

#define MAX_VALUE 100
#define MESSAGE "hello"
#define HEX_VALUE 0x1234

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (number)))))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (string)))))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (number))))))

==================
Function-like macros
==================

#define ndebug(msg) debug_msg(SCRIPT_REALNAME + ": " + msg)
#define add(x, y) (x + y)
#define get_sfall_arg_at(index) sfall_func1("get_sfall_arg_at", index)

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (binary_expr
              left: (binary_expr
                left: (identifier)
                right: (string))
              right: (identifier)))))))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier)
        (identifier))
      body: (macro_body
        (expression_stmt
          (paren_expr
            (binary_expr
              left: (identifier)
              right: (identifier)))))))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (string)
            args: (identifier)))))))

==================
Mixed macros
==================

#define SCRIPT_REALNAME "gl_g_auto_cursor"
#define DIK_M 50
#define ndebug(msg) debug_msg(SCRIPT_REALNAME + ": " + msg)
#define dude_elevation elevation(dude_obj)
#define set_cursor_mode(mode) sfall_func1("set_cursor_mode", mode)
#define fo2tweaks_ini "mods\\fo2tweaks.ini"

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (string)))))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (number)))))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (binary_expr
              left: (binary_expr
                left: (identifier)
                right: (string))
              right: (identifier)))))))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (identifier))))))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (string)
            args: (identifier))))))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (string))))))

==================
Include directives
==================

#include "sfall.h"
#include <define.h>

---

(source_file
  (preprocessor
    (include
      path: (string)))
  (preprocessor
    (include
      path: (string))))

==================
Ifdef endif
==================

#ifdef MY_MACRO
#define RESULT 1
#endif

---

(source_file
  (preprocessor
    (ifdef
      name: (identifier)))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (number)))))
  (preprocessor
    (endif)))

==================
Ifndef guard
==================

#ifndef GUARD_H
#define GUARD_H
#define VALUE 42
#endif

---

(source_file
  (preprocessor
    (ifndef
      name: (identifier)))
  (preprocessor
    (define
      name: (identifier)))
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (number)))))
  (preprocessor
    (endif)))

==================
Ifdef else endif
==================

#ifdef DEBUG
#define LOG(msg) debug_msg(msg)
#else
#define LOG(msg)
#endif

---

(source_file
  (preprocessor
    (ifdef
      name: (identifier)))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (identifier)
            args: (identifier))))))
  (preprocessor
    (pp_else))
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))))
  (preprocessor
    (endif)))

==================
Undef directive
==================

#undef MY_MACRO

---

(source_file
  (preprocessor (undef name: (identifier))))

==================
Preprocessor inside procedure
==================

procedure foo begin
    #ifdef DEBUG
    debug_msg("test");
    #endif
end

---

(source_file
  (procedure
    name: (identifier)
    body: (preprocessor (ifdef name: (identifier)))
    body: (expression_stmt (call_expr func: (identifier) args: (string)))
    body: (preprocessor (endif))))

==================
Multiline macro
==================

#define complex_macro(a, b) \
    variable temp; \
    temp := a + b; \
    return temp;

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier)
        (identifier))
      body: (macro_body
        (variable_decl
          (var_init
            name: (identifier)))
        (assignment
          left: (identifier)
          right: (binary_expr
            left: (identifier)
            right: (identifier)))
        (return_stmt
          (identifier))))))

==================
Backslash continuation followed by blank line
==================

#define FOO a + b \

procedure foo begin
end

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (expression_stmt
          (binary_expr
            left: (identifier)
            right: (identifier))))))
  (procedure
    name: (identifier)))

==================
Macro body final assignment without trailing semicolon
==================

#define set_counter   counter := 0

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (assignment
          left: (identifier)
          right: (number))))))

==================
Macro body final assignment nested in an if
==================

#define export_self_obj   if is_night then export_obj := self_obj

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (if_stmt
          cond: (identifier)
          then: (assignment
            left: (identifier)
            right: (identifier)))))))

==================
Macro body if/else chain ending without a semicolon
==================

#define set_ptr   if a then begin ptr := 1; end else if b then ptr := 2

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      body: (macro_body
        (if_stmt
          cond: (identifier)
          then: (block
            (assignment
              left: (identifier)
              right: (number)))
          else: (if_stmt
            cond: (identifier)
            then: (assignment
              left: (identifier)
              right: (number))))))))

==================
Macro body final return without trailing semicolon
==================

#define get_tile(x)   return tile_of(x)

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (return_stmt
          (call_expr
            func: (identifier)
            args: (identifier)))))))

==================
Macro body final call without trailing semicolon
==================

#define warp_to(t)   call warp_proc(t)

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (call_stmt
          target: (call_expr
            func: (identifier)
            args: (identifier)))))))

==================
Include with bare identifier macro
==================

#ifdef EXTRA_HEADER
#include EXTRA_HEADER
#endif

---

(source_file
  (preprocessor
    (ifdef
      name: (identifier)))
  (preprocessor
    (include
      path: (identifier)))
  (preprocessor
    (endif)))

==================
Token concatenation ## in macro body
==================

#define anim_to(x, type, dist)  animate_##type##_to_tile(dist)

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier)
        (identifier)
        (identifier))
      body: (macro_body
        (expression_stmt
          (call_expr
            func: (token_paste_identifier
              (identifier)
              (identifier)
              (identifier))
            args: (identifier)))))))

==================
Token paste ## in variable declaration name
==================

#define tvarMK(x) \
  variable tile##x := 0; \
  variable lTime##x := 0

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (variable_decl
          (var_init
            name: (token_paste_identifier
              (identifier)
              (identifier))
            value: (number)))
        (variable_decl
          (var_init
            name: (token_paste_identifier
              (identifier)
              (identifier))
            value: (number)))))))

==================
Token paste ## in assignment left-hand side
==================

#define tvarTile(x, y) tile##x := y

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier)
        (identifier))
      body: (macro_body
        (assignment
          left: (token_paste_identifier
            (identifier)
            (identifier))
          right: (identifier))))))

==================
Token paste ## in return expression
==================

#define TILEBLK(x) \
  if (number == x) then \
    return tile##x;

---

(source_file
  (preprocessor
    (define
      name: (identifier)
      params: (macro_params
        (identifier))
      body: (macro_body
        (if_stmt
          cond: (paren_expr
            (binary_expr
              left: (identifier)
              right: (identifier)))
          then: (return_stmt
            (token_paste_identifier
              (identifier)
              (identifier))))))))

